Connection Strings y conectar a SQL Server

--- a/Modulo02/App.config
+++ b/Modulo02/App.config
@@ -3,4 +3,7 @@
 	<appSettings>
 		<add key="mensaje" value="Hola Mundo desde el app.conf"/>
 	</appSettings>
+	<connectionStrings>
+		<add name="defaulConnection" connectionString="Data Source=DESKTOP-H4CI0FL;Initial Catalog=Prueba;Integrated Security=False;User ID=sa;Password=Luis1623"/>
+	</connectionStrings>
 </configuration>
